--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,25 +1,3 @@
-<footer class="px-4 md:px-8 pb-6 lg:pb-12 relative overflow-hidden z-0">
-    <div class="container mx-auto lg:px-8 xl:px-12 text-gray-500">
-		<div class="flex flex-wrap w-full items-center justify-center sm:justify-start">
-			<a href="https://www.tlapnet.cz" target="_blank" class="lg:flex-shrink-0 mb-4 sm:mb-0 mt-2">
-				<img
-						src="/assets/logo-tlapnet.png"
-						srcset="
-											/assets/logo-tlapnet.png 1x,
-											/assets/logo-tlapnet@2x.png 2x,
-											/assets/logo-tlapnet@2x.png 3x
-										"
-						alt="Tlapnet"
-				>
-			</a>
-			<div class="flex flex-col w-full sm:w-auto lg:flex-row sm:flex-1 text-center sm:text-left sm:pl-8 lg:items-center">
-				<div class="flex flex-col sm:flex-row items-center justify-center sm:justify-start flex-1 mb-2 sm:mb-0">
-					<span class="mx-2 sm:ml-0">E—mail: <a href="mailto:info@tlapnet.cz" class="text-gray-600 underline hover:no-underline hover:text-gray-700">info@tlapnet.cz</a></span> <span class="mx-2 sm:mr-0">Infolinka: <a href="tel:606606035" class="text-gray-600">606 606 035</span></a>
-				</div>
-				<div class="">
-					Tlapnet s.r.o. &copy; 2020
-				</div>
-			</div>
-		</div>
-    </div>
-</footer>
+<div class="mt-auto">
+	footer
+</div>
