--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,9 +1,9 @@
 <div class="flex flex-no-wrap text-gray-700 items-center py-6">
 	<div class="w-5/12 flex flex-col pl-10">
-		<div class="font-bold text-xl">
-			Denní plán
+		<div class="font-bold text-lg">
+			{{ title }}
 		</div>
-		<div class="text-base">4. 2. 2020</div>
+		<div class="text-sm">{{ subtitle }}</div>
 	</div>
 	<div class="w-5/12 flex flex-col text-2xs">
 		<div class="flex w-full items-start">
@@ -20,6 +20,6 @@
 		</div>
 	</div>
 	<div class="w-2/12 pr-10">
-		obr
+		<img src="https://s3.eu-central-1.amazonaws.com/unitecmsfx/beetfit/f20ec83a-484a-11ea-935f-a99480d98453/logo_1_color.png" loading="lazy">
 	</div>
 </div>
