--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,5 +8,262 @@ html{
 /* page.css */
 @page{margin:0}body{margin:0}.sheet{margin:0;overflow:hidden;position:relative;box-sizing:border-box;page-break-after:always}body.A3 .sheet{width:297mm;height:419mm}body.A3.landscape .sheet{width:420mm;height:296mm}body.A4 .sheet{width:210mm;height:297mm}body.A4.landscape .sheet{width:297mm;height:209mm}body.A5 .sheet{width:148mm;height:209mm}body.A5.landscape .sheet{width:210mm;height:147mm}body.letter .sheet{width:216mm;height:279mm}body.letter.landscape .sheet{width:280mm;height:215mm}body.legal .sheet{width:216mm;height:356mm}body.legal.landscape .sheet{width:357mm;height:215mm}.sheet.padding-10mm{padding:10mm}.sheet.padding-15mm{padding:15mm}.sheet.padding-20mm{padding:20mm}.sheet.padding-25mm{padding:25mm}@media screen{body{background:#e0e0e0}.sheet{background:#fff;box-shadow:0 .5mm 2mm rgba(0,0,0,.3);margin:0 auto}}@media print{body.A3.landscape{width:420mm}body.A3,body.A4.landscape{width:297mm}body.A4,body.A5.landscape{width:210mm}body.A5{width:148mm}body.legal,body.letter{width:216mm}body.letter.landscape{width:280mm}body.legal.landscape{width:357mm}}
 
+.richtext {
+    @apply leading-normal;
+    a {
+        @apply underline text-green-500;
+    &:hover {
+         @apply no-underline;
+     }
+    }
+    abbr {
+        @apply border-b border-dotted;
+        cursor: help;
+    }
+    cite {
+        @apply italic;
+    }
+    hr {
+        @apply bg-gray-300 border-none block h-px my-1;
+    }
+    img {
+        vertical-align: text-bottom;
+    }
+    ins {
+        @apply bg-green-300 no-underline;
+    }
+    mark {
+        @apply bg-yellow-500;
+    }
+    small {
+        @apply text-sm;
+    }
+    strong {
+        @apply font-bold;
+    }
+    sub,
+    sup {
+        @apply text-xs;
+    }
+    sub {
+        vertical-align: sub;
+    }
+    sup {
+        vertical-align: super;
+    }
+    p,
+    dl,
+    ol,
+    ul,
+    blockquote,
+    pre,
+    table {
+        @apply mb-1;
+    }
+    p:last-child,
+    dl:last-child,
+    ol:last-child,
+    ul:last-child,
+    blockquote:last-child,
+    pre:last-child,
+    table:last-child {
+        @apply mb-0;
+    }
+    p:empty {
+        @apply hidden;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        @apply font-medium leading-tight;
+    }
+    h1:first-child,
+    h2:first-child,
+    h3:first-child,
+    h4:first-child,
+    h5:first-child,
+    h6:first-child {
+        @apply mt-0;
+    }
+    h1 {
+        @apply text-3xl leading-none;
+    }
+    h2 {
+        @apply text-xl leading-tight font-bold tracking-tight;
+    }
+    h3 {
+        @apply text-lg;
+    }
+    h4 {
+        @apply text-lg text-gray-800;
+    }
+    h5 {
+        @apply text-base;
+    }
+    h6 {
+        @apply text-base;
+    }
+    dd {
+        @apply ml-6;
+    }
+    ol,
+    ul {
+        @apply ml-6;
+        list-style-position: outside;
+    }
+    ol {
+        list-style-type: decimal;
+    }
+    ol ol {
+        list-style-type: lower-alpha;
+    }
+    ol ol ol {
+        list-style-type: lower-roman;
+    }
+    ol ol ol ol {
+        list-style-type: lower-greek;
+    }
+    ol ol ol ol ol {
+        list-style-type: decimal;
+    }
+    ol ol ol ol ol ol {
+        list-style-type: lower-alpha;
+    }
+    ul {
+        list-style-type: none;
+    }
+    ul li{
+        @apply relative;
+        &:before{
+            content: "";
+            background: url("https://obr.now.sh/remix/system/arrow-drop-right-line/000000") no-repeat center center;
+            background-size: 140%;
+            @apply block w-3 h-3 absolute left-0 top-1/2 transform -ml-1 -translate-x-full -translate-y-1/2 opacity-25;
+        }
+    }
+    ul ul {
+        list-style-type: circle;
+    }
+    ul ul ul {
+        list-style-type: square;
+    }
+    ul ul ul ul {
+        list-style-type: circle;
+    }
+    ul ul ul ul ul {
+        list-style-type: disc;
+    }
+    ul ul ul ul ul ul {
+        list-style-type: circle;
+    }
+    blockquote {
+        @apply border-0 border-l-4 py-2 px-5;
+    }
+    blockquote p {
+        @apply mb-0;
+    }
+    code,
+    kbd,
+    samp,
+    pre {
+        @apply bg-gray-100 text-gray-800;
+        -moz-osx-font-smoothing: auto;
+        -webkit-font-smoothing: auto;
+    }
+    code,
+    kbd,
+    samp {
+        @apply rounded leading-relaxed pt-1 px-2 pb-1 align-baseline;
+    }
+    pre {
+        @apply overflow-auto py-4 px-6;
+    }
+    pre code {
+        @apply bg-transparent text-base leading-none p-0;
+    }
+    figure {
+        @apply mb-10 text-center;
+    }
+    figure img{
+        @apply mx-auto;
+    }
+    figure:first-child {
+        @apply mt-0;
+    }
+    figure:last-child {
+        @apply mb-0;
+    }
+    figcaption {
+        @apply text-sm mt-3;
+    }
+    table {
+        @apply w-full;
+    }
+    table pre {
+        @apply whitespace-pre-wrap;
+    }
+    th,
+    td {
+        @apply text-base p-3 border leading-normal;
+    }
+    thead tr,
+    tfoot tr {
+        @apply bg-gray-100;
+    }
+    thead th,
+    thead td,
+    tfoot th,
+    tfoot td {
+        @apply p-3;
+    }
+    thead th code,
+    thead td code,
+    tfoot th code,
+    tfoot td code {
+        @apply bg-white;
+    }
+    tbody tr {
+        @apply bg-white;
+    }
+    &.richtext-preformated{
+        hr{
+            @apply my-4;
+        }
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            @apply mb-2;
+        }
+        p,
+        dl,
+        ol,
+        ul,
+        blockquote,
+        pre,
+        table {
+            @apply mb-4;
+        }
+        p:last-child,
+        dl:last-child,
+        ol:last-child,
+        ul:last-child,
+        blockquote:last-child,
+        pre:last-child,
+        table:last-child {
+            @apply mb-0;
+        }
+        blockquote p:last-child{
+            @apply mb-0;
+        }
+    }
+}
+
+
 @tailwind utilities;
 /* purgecss end ignore */
