--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,9 +1,9 @@
 <div class="flex flex-no-wrap text-gray-700 items-center py-6">
 	<div class="w-5/12 flex flex-col pl-10">
-		<div class="font-bold text-lg">
+		<div class="font-bold text-xl">
 			{{ title }}
 		</div>
-		<div class="text-sm">{{ subtitle }}</div>
+		<div class="text-xs">{{ subtitle }}</div>
 	</div>
 	<div class="w-5/12 flex flex-col text-2xs">
 		<div class="flex w-full items-start">
