--- a/src/components/dottedHeader.html
+++ b/src/components/dottedHeader.html
@@ -1,6 +1,6 @@
-<div class="flex flex-no-wrap justify-between items-center relative">
-	<div class="absolute border-t-2 border-gray-400 border-dotted h-0 w-full top-1/2 left-0 z-0"></div>
-	<div class="text-xs font-bold mr-6 bg-white pr-4 relative z-10 text-{{color}}-700">{{ title }}</div>
+<div class="flex flex-no-wrap justify-between items-center relative flex-1">
+	<div class="absolute border-t-2 border-gray-300 border-dotted h-0 w-full top-1/2 left-0 z-0"></div>
+	<div class="text-sm font-bold mr-6 bg-white pr-4 relative z-10 text-{{color}}-700">{{ title }}</div>
 	<if condition="subtitle != ''">
 		<div class="text-2xs  bg-white pl-4 relative z-10">{{ subtitle }}</div>
 	</if>
