--- a/src/components/panel.html
+++ b/src/components/panel.html
@@ -1,7 +1,7 @@
-<div class="relative mb-2 overflow-hidden ">
+<div class="relative mb-2 overflow-hidden flex-1">
 	<div class="w-6 h-6 bg-{{ color }}-200 transform rotate-45 translate-y-1/2 translate-x-1/2 absolute right-0 bottom-0 z-10"></div>
 	<if condition="panelStyle === 'hollow'">
-		<div class="border-{{ color }}-300 border absolute top-0 left-0 w-full h-full z-30"></div>
+		<div class="border-{{ color }}-300 border absolute top-0 left-0 w-full h-full z-30 pointer-events-none"></div>
 	</if>
 	<else>
 		<div class="bg-{{ color }}-100 absolute top-0 left-0 w-full h-full z-0"></div>
@@ -11,14 +11,21 @@
 			<img src="https://obr.now.sh/{{ icon }}/64/{{ iconColor }}" loading="lazy" class="w-6 h-6 mr-4 flex-shrink-0">
 		</if>
 		<div class="flex-1">
-			<div class="flex justify-between items-center mb-1">
-				<if condition="header != ''">
-					<h2 class="font-semibold text-sm text-{{ color }}-700">{{ header }}</h2>
-				</if>
-				<if condition="kcal != ''">
-					<div class="rounded-full flex-shrink-0 bg-white text-{{ color }}-600 font-bold text-2xs px-2">{{ kcal }}</div>
-				</if>
-			</div>
+			<if condition="header != '' || kcal != ''">
+				<div class="flex justify-between items-center mb-1">
+					<if condition="header != ''">
+						<if condition="headerColor != ''">
+							<h2 class="font-semibold text-sm text-{{ headerColor }}-600">{{ header }}</h2>
+						</if>
+						<else>
+							<h2 class="font-semibold text-sm text-{{ color }}-600">{{ header }}</h2>
+						</else>
+					</if>
+					<if condition="kcal != ''">
+						<div class="rounded-full flex-shrink-0 bg-white text-{{ color }}-600 font-bold text-2xs px-2">{{ kcal }}</div>
+					</if>
+				</div>
+			</if>
 			<div class="text-2xs">
 				<content></content>
 			</div>
