added footer optional text, added labels to diary

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,9 +1,14 @@
-<div class="mt-auto mx-10 flex flex-no-wrap text-gray-700 items-center py-3 mb-3 border-t-2 border-dotted border-gray-300 text-3xs">
-	<div class="flex-shrink-0">
-		<img src="./assets/logo.svg" class="w-24">
+<div class="mt-auto mx-10 flex flex-col text-gray-700 items-center py-3 mb-3 border-t-2 border-dotted border-gray-300 text-3xs">
+	<div class="flex flex-no-wrap w-full">
+		<div class="flex-shrink-0">
+			<img src="./assets/logo.svg" class="w-24">
+		</div>
+		<div class="flex-1 flex items-center justify-end">
+			<div class="ml-4">Exportováno: <span class="bg-gray-200 rounded-full px-2 inline-block leading-4 font-bold ml-1">4. 2. 2020 19:42</span></div>
+			<div class="ml-4">Strana: <span class="bg-gray-200 rounded-full px-2 inline-block leading-4 font-bold ml-1">1/8</span></div>
+		</div>
 	</div>
-	<div class="flex-1 flex items-center justify-end">
-		<div class="ml-4">Exportováno: <span class="bg-gray-200 rounded-full px-2 inline-block leading-4 font-bold ml-1">4. 2. 2020 19:42</span></div>
-		<div class="ml-4">Strana: <span class="bg-gray-200 rounded-full px-2 inline-block leading-4 font-bold ml-1">1/8</span></div>
+	<div class="w-full text-2xs mt-2">
+		Pacient byl poučen a seznámen se všemi riziky.
 	</div>
 </div>
