--- a/src/components/panel.html
+++ b/src/components/panel.html
@@ -1,4 +1,4 @@
-<div class="relative mb-2 overflow-hidden flex-1">
+<div class="relative flex flex-1 mb-2 overflow-hidden page-break-inside-avoid">
 	<div class="w-6 h-6 bg-{{ color }}-200 transform rotate-45 translate-y-1/2 translate-x-1/2 absolute right-0 bottom-0 z-10"></div>
 	<if condition="panelStyle === 'hollow'">
 		<div class="border-{{ color }}-300 border absolute top-0 left-0 w-full h-full z-30 pointer-events-none"></div>
@@ -6,13 +6,13 @@
 	<else>
 		<div class="bg-{{ color }}-100 absolute top-0 left-0 w-full h-full z-0"></div>
 	</else>
-	<div class="flex items-start px-4 py-3 z-20 relative">
+	<div class="relative z-20 flex items-start w-full px-4 py-3">
 		<if condition="icon != ''">
-			<img src="https://obr.now.sh/{{ icon }}/64/{{ iconColor }}" loading="lazy" class="w-6 h-6 mr-4 flex-shrink-0">
+			<img src="https://obr.now.sh/{{ icon }}/64/{{ iconColor }}" loading="lazy" class="flex-shrink-0 w-6 h-6 mr-4">
 		</if>
 		<div class="flex-1">
 			<if condition="header != '' || kcal != ''">
-				<div class="flex justify-between items-center mb-1">
+				<div class="flex items-center justify-between mb-1">
 					<if condition="header != ''">
 						<if condition="headerColor != ''">
 							<h2 class="font-semibold text-sm text-{{ headerColor }}-600">{{ header }}</h2>
