--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,14 +1,14 @@
-<div class="mt-auto mx-10 flex flex-col text-gray-700 items-center py-3 mb-3 border-t-2 border-dotted border-gray-300 text-3xs">
-	<div class="flex flex-no-wrap w-full">
+<div class="flex flex-col items-center px-10 py-6 pb-3 mx-auto text-gray-700 print-footer text-3xs">
+	<div class="flex flex-no-wrap w-full py-3 border-t-2 border-gray-300 border-dotted">
 		<div class="flex-shrink-0">
 			<img src="./assets/logo.svg" class="w-24">
 		</div>
-		<div class="flex-1 flex items-center justify-end">
-			<div class="ml-4">Exportováno: <span class="bg-gray-200 rounded-full px-2 inline-block leading-4 font-bold ml-1">4. 2. 2020 19:42</span></div>
-			<div class="ml-4">Strana: <span class="bg-gray-200 rounded-full px-2 inline-block leading-4 font-bold ml-1">1/8</span></div>
+		<div class="flex items-center justify-end flex-1">
+			<div class="ml-4">Exportováno: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">4. 2. 2020 19:42</span></div>
+			<div class="ml-4">Strana: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">1/8</span></div>
 		</div>
 	</div>
-	<div class="w-full text-2xs mt-2">
+	<div class="w-full mt-2 text-2xs">
 		Pacient byl poučen a seznámen se všemi riziky.
 	</div>
 </div>
