--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,21 +1,21 @@
-<div class="flex flex-no-wrap text-gray-700 items-center py-6">
-	<div class="w-5/12 flex flex-col pl-10">
-		<div class="font-bold text-xl">
+<div class="flex flex-no-wrap items-center py-6 mx-auto text-gray-700 print-header">
+	<div class="flex flex-col w-5/12 pl-10">
+		<div class="text-xl font-bold">
 			{{ title }}
 		</div>
 		<div class="text-xs">{{ subtitle }}</div>
 	</div>
-	<div class="w-5/12 flex flex-col text-2xs">
-		<div class="flex w-full items-start">
-			<div class="w-1/3 text-gray-600 text-right pr-2">Název firmy:</div>
+	<div class="flex flex-col w-5/12 text-2xs">
+		<div class="flex items-start w-full">
+			<div class="w-1/3 pr-2 text-right text-gray-600">Název firmy:</div>
 			<div class="w-2/3 font-bold">Fitbee s.r.o. Praha 4, Podolská 25</div>
 		</div>
-		<div class="flex w-full items-start">
-			<div class="w-1/3 text-gray-600 text-right pr-2">Specialista:</div>
+		<div class="flex items-start w-full">
+			<div class="w-1/3 pr-2 text-right text-gray-600">Specialista:</div>
 			<div class="w-2/3 font-bold">Marcela Krausová</div>
 		</div>
-		<div class="flex w-full items-start">
-			<div class="w-1/3 text-gray-600 text-right pr-2">Název firmy:</div>
+		<div class="flex items-start w-full">
+			<div class="w-1/3 pr-2 text-right text-gray-600">Název firmy:</div>
 			<div class="w-2/3 font-bold">Daniel Kalivoda [831118/3309]</div>
 		</div>
 	</div>
