--- a/src/components/basePage.html
+++ b/src/components/basePage.html
@@ -2,7 +2,32 @@
     <thead>
         <tr>
             <td>
-                <div class="h-28 fake-header"></div>
+                <div class="flex flex-no-wrap items-center py-6 mx-auto text-gray-700">
+                    <div class="flex flex-col w-5/12 pl-10">
+                        <div class="text-xl font-bold">
+                            {{ title }}
+                        </div>
+                        <div class="text-xs">{{ subtitle }}</div>
+                    </div>
+                    <div class="flex flex-col w-5/12 text-2xs">
+                        <div class="flex items-start w-full">
+                            <div class="w-1/3 pr-2 text-right text-gray-600">Název firmy:</div>
+                            <div class="w-2/3 font-bold">Fitbee s.r.o. Praha 4, Podolská 25</div>
+                        </div>
+                        <div class="flex items-start w-full">
+                            <div class="w-1/3 pr-2 text-right text-gray-600">Specialista:</div>
+                            <div class="w-2/3 font-bold">Marcela Krausová</div>
+                        </div>
+                        <div class="flex items-start w-full">
+                            <div class="w-1/3 pr-2 text-right text-gray-600">Název firmy:</div>
+                            <div class="w-2/3 font-bold">Daniel Kalivoda [831118/3309]</div>
+                        </div>
+                    </div>
+                    <div class="w-2/12 pr-10">
+                        <img src="https://s3.eu-central-1.amazonaws.com/unitecmsfx/beetfit/f20ec83a-484a-11ea-935f-a99480d98453/logo_1_color.png" loading="lazy">
+                    </div>
+                </div>
+
             </td>
         </tr>
     </thead>
@@ -13,11 +38,26 @@
             </td>
         </tr>
     </tbody>
-    <tfoot>
-        <tr>
-          <td>
-            <div class="h-28 fake-header"></div>
-          </td>
-        </tr>
-    </tfoot>
+    <if condition="footer">
+        <tfoot>
+            <tr>
+            <td>
+                <div class="fixed bottom-0 left-0 flex flex-col items-center w-full px-10 py-6 pb-3 mx-auto text-gray-700 text-3xs">
+                    <div class="flex flex-no-wrap w-full py-3 border-t-2 border-gray-300 border-dotted">
+                        <div class="flex-shrink-0">
+                            <img src="./assets/logo.svg" class="w-24">
+                        </div>
+                        <div class="flex items-center justify-end flex-1">
+                            <div class="ml-4">Exportováno: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">4. 2. 2020 19:42</span></div>
+                            <div class="ml-4">Strana: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">1/8</span></div>
+                        </div>
+                    </div>
+                    <div class="w-full mt-2 text-2xs">
+                        Pacient byl poučen a seznámen se všemi riziky.
+                    </div>
+                </div>
+            </td>
+            </tr>
+        </tfoot>
+    </if>
 </table>
