--- a/src/components/basePage.html
+++ b/src/components/basePage.html
@@ -38,26 +38,24 @@
             </td>
         </tr>
     </tbody>
-    <if condition="footer">
-        <tfoot>
-            <tr>
-            <td>
-                <div class="fixed bottom-0 left-0 flex flex-col items-center w-full px-10 py-6 pb-3 mx-auto text-gray-700 text-3xs">
-                    <div class="flex flex-no-wrap w-full py-3 border-t-2 border-gray-300 border-dotted">
-                        <div class="flex-shrink-0">
-                            <img src="./assets/logo.svg" class="w-24">
-                        </div>
-                        <div class="flex items-center justify-end flex-1">
-                            <div class="ml-4">Exportováno: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">4. 2. 2020 19:42</span></div>
-                            <div class="ml-4">Strana: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">1/8</span></div>
-                        </div>
+    <tfoot>
+        <tr>
+          <td>
+            <div class="fixed bottom-0 left-0 flex flex-col items-center px-10 py-6 pb-3 mx-auto text-gray-700 w text-3xs">
+                <div class="flex flex-no-wrap w-full py-3 border-t-2 border-gray-300 border-dotted">
+                    <div class="flex-shrink-0">
+                        <img src="./assets/logo.svg" class="w-24">
                     </div>
-                    <div class="w-full mt-2 text-2xs">
-                        Pacient byl poučen a seznámen se všemi riziky.
+                    <div class="flex items-center justify-end flex-1">
+                        <div class="ml-4">Exportováno: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">4. 2. 2020 19:42</span></div>
+                        <div class="ml-4">Strana: <span class="inline-block px-2 ml-1 font-bold leading-4 bg-gray-200 rounded-full">1/8</span></div>
                     </div>
                 </div>
-            </td>
-            </tr>
-        </tfoot>
-    </if>
+                <div class="w-full mt-2 text-2xs">
+                    Pacient byl poučen a seznámen se všemi riziky.
+                </div>
+            </div>
+          </td>
+        </tr>
+    </tfoot>
 </table>
